--- a/Ki4C_Solution.csproj
+++ b/Ki4C_Solution.csproj
@@ -24,10 +24,14 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Compile Remove="resources\Class1.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="BCrypt.Net-Next" Version="4.0.3" />
     <PackageReference Include="Microsoft.IdentityModel.Tokens" Version="6.26.0" />
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.17.0" />
-    <PackageReference Include="MySql.Data" Version="8.0.32" />
+    <PackageReference Include="MySql.EntityFrameworkCore" Version="7.0.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
     <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.26.0" />
     <PackageReference Include="System.ServiceModel.Primitives" Version="4.10.0" />
@@ -35,6 +39,26 @@
 
   <ItemGroup>
     <Folder Include="Services\" />
+    <Folder Include="wwwroot\index\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Include="resources\Class1.cs">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <LastGenOutput>Class1.txt</LastGenOutput>
+    </None>
+  </ItemGroup>
+
+  <ItemGroup>
+    <Service Include="{508349b6-6b84-4df5-91f0-309beebad82d}" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Update="resources\Class1.txt">
+      <DesignTime>True</DesignTime>
+      <AutoGen>True</AutoGen>
+      <DependentUpon>Class1.cs</DependentUpon>
+    </None>
   </ItemGroup>
 
 </Project>
